style.css
/* Styles go here */

/* Styles go here */

/* Styles go here */
body {
  color: #000;
  font-family: 'Nunito Semibold';
  background: url('http://cdn1.theinertia.com/wp-content/uploads/2016/01/veggies.jpg') no-repeat;
  background-size: cover;
  text-align: center;
  max-width: 960px;
  margin: 0 auto;
}

#container {
  width: 100%;
  border: 1px solid #000;
  background: lightgreen;
  margin-top:20px;
  z-index: 9999;
  display: grid;
  grid-template-columns: repeat(6, 1fr); /* 3 2 4 */
  grid-auto-rows: minmax(100%, auto);
  grid-gap: 10px;
  grid-template-areas: 
  "mainTitle  mainTitle mainTitle mainTitle mainTitle mainTitle"
  "title1     title1    title1    title2    title2    title2"
  "img        img       img       cidForm   cidForm   cidForm"
  "img        img       img       cidForm   cidForm   cidForm"
  "img        img       img       cidForm   cidForm   cidForm"
  "img        img       img       cidForm   cidForm   cidForm"
  "pcForm     pcForm    pcForm    cidForm   cidForm   cidForm"
  "pcForm     pcForm    pcForm    cidForm   cidForm   cidForm"
  "pcForm     pcForm    pcForm    cidForm   cidForm   cidForm"
  "clBtn      clBtn     clBtn     cidForm   cidForm   cidForm"
  "rndBtn     rndBtn    rndBtn    cidForm    cidForm  cidForm"
  
  
  "title3     title3   title3     title3     title3   title3"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result";
}
#main_title {
 grid-area: mainTitle
}
#title1 {
  grid-area: title1;
}
#title2 {
  grid-area: title2;
}
#title3 {
  grid-area: title3;
}
img {
  max-width: 100%;
  grid-area: img;
}

#priceCashForm {
  grid-area: pcForm;
}
#cidForm {
  grid-area: cidForm;
}
#result {
  grid-area: result;
}
#clearBtn {
  grid-area: clBtn;
  align-self: start;
}
#randomizeBtn {
  grid-area: rndBtn;
  align-self: start;
}
.form-field {
  color: #fff;
	background: #3bbced;
	border: 1px solid #ccc;
	padding: 5px;
	text-align: right;
	font-size: 0.8rem;
}
#priceCashForm .form-field {
  text-align: center;
}
.btn {
  padding: 5px 10px;
  background: #000;
  color: #fff;
  /*width: 200px;*/
  height: 50px;
  margin: 0;
}

h1 {
  text-align: center;
  color: #000;
  margin: 30px auto 30px;
}
h3 {
  color: lightgreen;
  background: #555;
  padding:5px;
}

input {
  background: lightyellow;
  max-width: 80px;
  padding: 5px;

}

th, td {
  text-align: center;
  padding: 5px;
}

#curr, th{
  background: #777;
  color: #fff;
}
#cid_before{
  color: green;
  background: greenyellow;
}

#change_due{
  color: red;
  background: lightgray;
}

#cid_after{
  color: blue;
  background: lightblue;
}




/* Media queries */

@media screen and (min-width: 600px) and (max-width: 850px){
  #container{
    grid-template-areas: 
  "mainTitle  mainTitle mainTitle mainTitle mainTitle mainTitle"
  "title1     title1    title1    title2    title2    ."
  "img        img       img       cidForm   cidForm   ."
  "img        img       img       cidForm   cidForm   ."
  "img        img       img       cidForm   cidForm   ."
  "img        img       img       cidForm   cidForm   ."
  "pcForm     pcForm    pcForm    cidForm   cidForm   ."
  "pcForm     pcForm    pcForm    cidForm   cidForm   ."
  "pcForm     pcForm    pcForm    cidForm   cidForm   ."
  "clBtn      clBtn     clBtn     cidForm   cidForm   ."
  "rndBtn     rndBtn    rndBtn    cidForm    cidForm  ."
  
  
  "title3     title3   title3     title3     title3   title3"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result"
  "result     result   result     result     result   result";
  }
  .form-field {
    font-size: 1rem;
  }
}
@media screen and (min-width: 851px){
   
  #container {
    grid-template-columns: repeat(12, 1fr); /* 3 2 4 */
    grid-template-areas: 
    "mainTitle  mainTitle mainTitle mainTitle mainTitle mainTitle mainTitle mainTitle mainTitle mainTitle mainTitle mainTitle"
    "title1     title1    title1    title1    title2    title2    title2    title3    title3    title3    title3    title3"
    "img        img       img       img       cidForm   cidForm   cidForm   result    result    result    result    result"
    "img        img       img       img       cidForm   cidForm   cidForm   result    result    result    result    result"
    "img        img       img       img       cidForm   cidForm   cidForm   result    result    result    result    result"
    "img        img       img       img       cidForm   cidForm   cidForm   result    result    result    result    result"
    ".          pcForm    pcForm    .         cidForm   cidForm   cidForm   result    result    result    result    result"
    ".          pcForm    pcForm    .         cidForm   cidForm   cidForm   result    result    result    result    result"
    ".          pcForm    pcForm    .         cidForm   cidForm   cidForm   result    result    result    result    result"
    "clBtn      clBtn     rndBtn    rndBtn    cidForm   cidForm   cidForm   result    result    result    result    result"
    "clBtn      clBtn     rndBtn    rndBtn    cidForm   cidForm   cidForm   result    result    result    result    result";
    }
    .form-field {
      font-size: 1rem;
    }
}

